@@ -8,6 +8,7 @@ Changes in version 0.5-3 (2015-03-??)
    * upFirst: leave all words with > 1 upper case letter unchanged (for acronyms)
    * accrualReport: changed denominator to randomized subjects for table corresponding to box plots of days to randomization
    * all reporting functions: use upFirst(lower=TRUE) for captions
+   * appsection: new function
 
 Changes in version 0.5-2 (2014-11-21)
    * accrualReport: axis.Date was not positioning axis labels containing only 4-digit years at Jan 1 so wrote customized axisDate function
